--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
 ### Maven template
 target/
 pom.xml.tag
@@ -88,6 +87,11 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+
+### Gradle
+.gradle/
+build/
+gradle/
 
 
 ### Java template
