Improved code clarity, Added Bedrock enable option, Removed blackholes

--- a/src/main/resources/ids.yml
+++ b/src/main/resources/ids.yml
@@ -11,12 +11,10 @@ ids:
             generatesatellites: false
             generatefloor: false
             generateschematics: false
-            generateblackholes: false
             glowstonechance: 1
             stonechance: 3
             satellitechance: 1
             schematicchance: 5
-            blackholechance: 8
         suit:
             required: false
         helmet:
@@ -31,15 +29,13 @@ ids:
             generatesatellites: true
             generatefloor: true
             generateschematics: true
-            generateblackholes: true
             glowstonechance: 1
             stonechance: 3
             satellitechance: 1
             schematicchance: 5
-            blackholechance: 8
         suit:
             required: false
         helmet:
             required: false
         maxroomheight: 5
-        alwaysnight: true
+        alwaysnight: false
