Added remote script for minecraft server This lets you debug the plugin 'live' on the server as it's running

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,11 @@ build/
 gradle/
 logs/
 
+### VSCode settings
+.vscode/
+
+### Servers in debug scripts
+debug-scripts/server/
 
 ### Java template
 *.class
