--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,22 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
+    "version": "0.3.0",
     "configurations": [
         {
             "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
+        },
+        {
+            "preLaunchTask": "Copy Latest Build + Launch Server (1_21_11, Paper)",
+            "type": "java",
+            "name": "Debug MC Server (1_21_11)",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": 5005,
+            "timeout": 30000 //30s
         }
     ]
 }
