Fixed server crash bug + Added config option * Fixed world generation crash because of invalid block id * Added option to skip block id check (for modded blocks)

--- a/src/main/resources/planets.yml
+++ b/src/main/resources/planets.yml
@@ -15,6 +15,8 @@ floorBlock: STATIONARY_WATER
 floorHeight: 0
 # Sets the layer y=0 to bedrock, if a floor is used
 bedrockEnabled: true
+# Enable this only if you want to use a blocks from a mod. Careful: Block typos WILL crash your server!
+ignoreInvalidBlockIds: false
 # Minimum & maximum planet size (radius)
 minSize: 10
 maxSize: 40
