--- a/debug-scripts/.vscode-linux/configs.json
+++ b/debug-scripts/.vscode-linux/configs.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.3.0",
     "configurations": [
         {
@@ -17,7 +14,7 @@
             "request": "attach",
             "hostName": "localhost",
             "port": 5005,
-            "timeout": 30000, //30s
+            "timeout": 30000
         }
     ]
 }
