Changed Set to ArrayList to enable duplicate blocks in blocklists and removed SpaceEffectPopulator (the same effect can be achieved using Floor settings)

--- a/src/main/resources/planets.yml
+++ b/src/main/resources/planets.yml
@@ -7,8 +7,9 @@
 # Remember, these settings affect all space worlds with 
 # planet generation turned on!
 
+# Send console messages to help with troubleshooting
+debugging: false
 # As this goes up, so does the potential number of planets
-debugging: true
 density: 1000
 minDistance: 100
 floorBlock: STATIONARY_WATER
