Better debug scripts

--- a/debug-scripts/.vscode-linux/tasks.json
+++ b/debug-scripts/.vscode-linux/tasks.json
@@ -7,7 +7,7 @@
       "type": "shell",
       "args": [
         "/c",
-        "start-server.bat",
+        "start-server.sh",
         "1.21.11",
         "paper"
       ],
