--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,8 @@
 
 name: CrystalSpace
 main: com.crystalcraftmc.crystalspace.Space
-version: 3.0.0-BETA-1
+version: 3.1.0
+api-version: '1.21'
 authors: [kitskub, iffa, SwearWord, HACKhalo2, Canis85, BR, jflory7, Jacc734, Jwood9198, atkoliver ]
 website: https://github.com/atkoliver/CrystalSpace
 # jenkins-url:
