--- a/src/main/resources/planets.yml
+++ b/src/main/resources/planets.yml
@@ -39,16 +39,18 @@ blocks:
     - STONE,DIRT-1.0
     - STONE-1.0
     - DIRT-1.0
-    - OAK_LEAVES-0.9
-    - ICE-0.9
-    - GLASS-0.9
-    - SNOW_BLOCK-0.9
-    - SANDSTONE-0.8
-    - BRICK-0.6
-    - OBSIDIAN-0.5
+    - OAK_LEAVES,OAK_LEAVES,SPRUCE_LEAVES,BIRCH_LEAVES-0.85
+    - ICE-0.7
+    - SNOW_BLOCK-0.7
+    - SANDSTONE-0.7
+    - GRANITE-0.5
+    - CLAY-0.5
     - WHITE_WOOL-0.4
+    - OBSIDIAN-0.4
     - GLOWSTONE-0.4
-    - MOSSY_COBBLESTONE-0.3
+    - GLASS-0.4
+    - PURPUR_BLOCK-0.02
+    - SLIME_BLOCK-0.01
     # Planet cores
     cores:
     - BEDROCK-0.5
@@ -56,12 +58,15 @@ blocks:
     - WATER-1.0
     - COAL_ORE-1.0
     - IRON_ORE-0.8
-    - REDSTONE_ORE-0.75
-    - GOLD_ORE-0.6
+    - REDSTONE_ORE-0.65
+    - COPPER_ORE-0.65
+    - GOLD_ORE-0.65
     - LAPIS_ORE-0.4
     - DIAMOND_ORE-0.4
-    - OAK_LOG-1.0
+    - OAK_LOG,SPRUCE_LOG,BIRCH_LOG,JUNGLE_LOG-1.0
+    - ACACIA_LOG,CHERRY_LOG,MANGROVE_LOG-0.1
+    - DARK_OAK_LOG,PALE_OAK_LOG,-0.01
     - PUMPKIN-0.8
     - SAND-1.0
-    - CLAY-0.3
+    - CLAY-0.5
     - AIR-1.0
