Rebranding & multiple changes. Renamed to 'DuzySpace'. Created new README.md. Created new CONTIRBUTING.md. Added option for enabling/disabling spawn planet. Fixed the VSCode Linux settings. More TODOs.

--- a/debug-scripts/.vscode-linux/tasks.json
+++ b/debug-scripts/.vscode-linux/tasks.json
@@ -1,44 +1,45 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Copy Latest Build & Launch Server (1_21_11, Paper)",
-      "command": "cmd",
-      "type": "shell",
-      "args": [
-        "/c",
-        "start-server.sh",
-        "1.21.11",
-        "paper"
-      ],
-      "options": {
-        "cwd":  "debug-scripts\\"
-      },
-      "problemMatcher": [
+    "version": "2.0.0",
+    "tasks":
+    [
         {
-          "pattern": [
+        "label": "Copy Latest Build + Launch Server (1_21_11, Paper)",
+        "type": "shell",
+        "command": "cmd",
+        "args": [
+            "/c",
+            "start-server.sh",
+            "1.21.11",
+            "paper"
+        ],
+        "options": {
+            "cwd": "debug-scripts/"
+        },
+        "presentation": {
+            "echo": true,
+            "reveal": "always",
+            "focus": true,
+            "panel": "new"
+        },
+        "isBackground": true,
+        "group": "none",
+        "problemMatcher": [
             {
-              "regexp": ".",
-              "file": 1,
-              "location": 2,
-              "message": 3
+            "pattern": [
+                {
+                "regexp": ".",
+                "file": 1,
+                "location": 2,
+                "message": 3
+                }
+            ],
+            "background": {
+                "activeOnStart": false,
+                "beginsPattern": "Starting",
+                "endsPattern": "."
             }
-          ],
-          "background": {
-            "activeOnStart": false,
-            "beginsPattern": "Starting",
-            "endsPattern": ".",
-          }
-        }
-      ],
-      "presentation": {
-        "panel" : "new",
-        "reveal": "always",
-        "echo": true,
-        "focus": true
-      },
-      "isBackground": true,
-      "group": "build"
+            }
+        ]
     }
-  ]
+    ]
 }
