--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,4 +1,4 @@
-# CrystalSpace v3.0.0-ALPHA - "Language" file (for localization purposes)
+# DuzySpace v3.0.0-ALPHA - "Language" file (for localization purposes)
 # ----------------------------------------
 #     This configuration has a pretty      
 #    huge amount of documentation, but     
