--- a/.gitignore
+++ b/.gitignore
@@ -111,10 +111,5 @@ debug-scripts/server*/
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-<<<<<<< HEAD
+replay_pid*
 hs_err_pid*
-=======
-hs_err_pid*
-
-
->>>>>>> master
